EVA-147 Feat: Se cambia la acción del volver al perfil de los formularios de documentos y entidades bancarias

--- a/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
@@ -41,7 +41,7 @@
                         </div>
                         <div class="col-md-2" style="float: right" >
                             <small style="float: right">
-                                <a href="javascript:history.back()" class="btn btn-primary btn-pills btn-block">Volver al Perfil</a>
+                                <a href="{% url 'Administracion:proveedor-perfil' %}" class="btn btn-primary btn-pills btn-block">Volver al Perfil</a>
                             </small>
                         </div>
                     </div>
