--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -14,7 +14,7 @@
             <div id="update-chart" class="d-flex flex-column align-items-center">
                 <div class="row w-100">
                     <div class="col-md-6 p-0 align-items-center">
-                        {% if n_doc_obl and n_doc_obl == n_tip_obl %}
+                        {% if n_doc_oblig and n_doc_oblig == n_tip_oblig %}
                             <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="0">
                                 <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
                                     <span class="js-percent d-block text-dark">{{ total }}</span>
