EVA-147 Fix: Se corrige el error que mostraba todo el tiempo los documentos en completos.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -38,7 +38,7 @@
                         <div class="col-md-6 p-0">
                             <div class="mt-2 mb-1 m-l-20 fs-xs text-primary">
                                 <b>Estado: </b>
-                                {% if doc_cargados ==  doc_pendientes or n_doc_obl == n_tip_obl %}
+                                {% if doc_cargados ==  doc_pendientes or n_doc_oblig == n_tip_oblig %}
                                     <span class="badge badge-primary">Completado</span><br>
                                 {% else %}
                                     <span class="badge badge-secondary">Incompletos</span><br>
