--- a/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
@@ -36,7 +36,7 @@
                                             <tbody>
                                                 {% for certificacion in certificaciones %}
                                                     <tr>
-                                                        <td>{{ certificacion.fecha_crea | date:'Y-m-d' }}</td>
+                                                        <td>{{ certificacion.fecha_crea | date:'Y-m-d h:i a' }}</td>
                                                         <td>
                                                             {% if certificacion.estado == True %}
                                                             <span class="badge badge-primary">Activo</span>
@@ -69,10 +69,5 @@
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/custom/exportar_tabla.js' %}"></script>
-    <script>
-        $(document).ready(function() {
-            iniciarTablaExportar([0, 1]);
-        });
-    </script>
+    <script src="{% static 'Administracion/js/Tercero/controlDataTableCertificaciones.js' %}"></script>
 {% endblock %}
