--- a/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
@@ -44,9 +44,9 @@
                                                     <tr>
                                                         <td>{{ solicitud.proveedor.nombre }}</td>
                                                         <td>{{ solicitud.proveedor.tipo_identificacion.sigla}} {{ solicitud.proveedor.identificacion}}</td>
-                                                        <td>{{ solicitud.proveedor.ciudad | title }} - {{ solicitud.proveedor.ciudad.departamento | title }} - {{ solicitud.proveedor.ciudad.departamento.pais }}</td>
+                                                        <td>{{ solicitud.proveedor.ciudad.obtener_pais_dpto_mun }}</td>
                                                         <td>{{ solicitud.proveedor.telefono_movil_principal }}</td>
-                                                        <td>{{ solicitud.proveedor.telefono_movil_principal }}</td>
+                                                        <td>{{ solicitud.proveedor.correo_principal }}</td>
                                                         <td>
                                                             {% if solicitud.proveedor.estado == True %}
                                                             <span class="badge badge-primary">Activo</span>
