--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
@@ -19,6 +19,7 @@
                         <span class="page-logo-text mr-1">EVA - Proveedores</span>
                     </div>
                     <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0" style="padding-top: 10px">
+                        <h3 class="header-title" style="text-align: center">Asignación de Contraseña</h3>
                         {% if validlink %}
                             <form action="" method="post" class="needs-validation" novalidate>
                                 <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
