--- a/Administracion/templates/Administracion/_common/_tarjeta_documento.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_documento.html
@@ -4,7 +4,7 @@
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="d-flex flex-row align-items-center">
                 <div class="info-card-text flex-1">
-                    <h4>{% if objeto.tipo_documento %}{{ objeto.tipo_documento }}{% else %}{{ objeto.nombre }}{% endif %}</h4>
+                    <h4>{% if objeto.tipo_documento %}{{ objeto.tipo_documento }} {% if not objeto.tipo_documento.obligatorio %}(Opcional){% endif %}{% else %}{{ objeto.nombre }}{% endif %}</h4>
                 </div>
                 <div class="info-card-text flex-1" style="text-align: end" >
                     {% if objeto.tipo_documento %}
