--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
@@ -41,11 +41,11 @@
                         </div>
                         <input id="datos_token" name="datos" hidden value="{{ datos }}">
                         <div class="row no-gutters">
-                            <div class="col-lg-6 pl-lg-1 my-2">
-                                <a href="{% url 'Administracion:proveedor-registro' %}" class="btn btn-primary btn-block">Registrarse</a>
+                            <div class="col-lg-12">
+                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block btn-pills">Iniciar sesión</button>
                             </div>
-                            <div class="col-lg-6 pl-lg-1 my-2">
-                                <button id="js-login-btn" type="submit" class="btn btn-danger btn-block ">Iniciar sesión</button>
+                            <div class="col-lg-12 pt-2 t-a-c">
+                                ¿No tiene una cuenta?&nbsp;&nbsp;<a href="{% url 'Administracion:proveedor-registro' %}" class="text-primary"> Registrarse</a>
                             </div>
                         </div>
                     </form>
