--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div id="c_{{ objeto.id }}" class="card border shadow-0 mb-g shadow-sm-hover">
-    <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top {% if not objeto.completo and not objeto.id == 0 %}alert-primary{% endif %}">
+    <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top {% if not objeto.completo and not objeto.id == 0 %}alert-primary{% endif %} {% if objeto.modificado and solicitud_proveedor %}alert-primary{% endif %}">
         <div class="d-flex flex-row align-items-center">
             <div class="info-card-text flex-1">
                 {% if objeto.id != 0 %}
