EVA-150 Feat: Se realizan modificaciones en la tarjeta del proveedor Para poder mostrar de forma ordenada los productos y servicios.

--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -28,12 +28,21 @@
                                     </small>
                                 {% endif %}
                             {% else %}
-                                <small class="mt-0 mb-3 text-muted">
-                                    <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
-                                    {% if d.archivo %}
-                                        <a class="far fa-eye" style="text-decoration: none !important;" target="_blank" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
-                                    {% endif %}
-                                </small>
+                                {% if pro_ser %}
+                                    <small class="mt-0 mb-3 text-muted">
+                                        <b>{{ d.nombre_campo }}</b>:
+                                            {% for datos in d.valor_campo %}
+                                                <br>&nbsp;&nbsp;&nbsp;&nbsp;<b>{{ datos.objeto }}: </b>{% for dts in datos.sub %}{{ dts }},&nbsp;{% endfor %}
+                                            {% endfor %}
+                                    </small>
+                                {% else %}
+                                    <small class="mt-0 mb-3 text-muted">
+                                        <b>{{ d.nombre_campo }}</b>: {{ d.valor_campo }}
+                                        {% if d.archivo %}
+                                            <a class="far fa-eye" style="text-decoration: none !important;" target="_blank" href="{{ d.archivo }}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver Archivo"></a>
+                                        {% endif %}
+                                    </small>
+                                {% endif %}
                             {% endif %}
                         {% endif %}
                     {% endfor %}
