--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -70,7 +70,7 @@
                                         <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
                                             <div id="segundo_div">
                                                 {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.entidades_bancarias %}
-                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios %}
+                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios pro_ser=True %}
                                                 {% if datos_proveedor.documentos_adicionales.datos and solicitud_proveedor %}
                                                     {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.documentos_adicionales %}
                                                 {% elif not solicitud_proveedor %}
