--- a/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/solicitudes_proveedores.html
@@ -43,7 +43,7 @@
                                                 {% for solicitud in solicitudes %}
                                                     <tr>
                                                         <td>{{ solicitud.proveedor.nombre }}</td>
-                                                        <td>{{ solicitud.proveedor.tipo_identificacion.sigla}} {{ solicitud.proveedor.identificacion}}</td>
+                                                        <td>{{ solicitud.proveedor.tipo_identificacion.sigla}} {{ solicitud.proveedor.identificacion}}{% if solicitud.proveedor.tipo_identificacion.sigla == 'NIT' %}-{{ solicitud.proveedor.digito_verificacion }}{% endif %}</td>
                                                         <td>{{ solicitud.proveedor.ciudad.obtener_pais_dpto_mun }}</td>
                                                         <td>{{ solicitud.proveedor.telefono_movil_principal }}</td>
                                                         <td>{{ solicitud.proveedor.correo_principal }}</td>
