--- a/Administracion/templates/Administracion/Tercero/Proveedor/index.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/index.html
@@ -26,19 +26,19 @@
                         <div class="panel-hdr">
                             <br>
                             <form action="{% url 'Administracion:proveedor-administracion-index' %}" id="filtro-proveedores-form" method="get" class="needs-validation col-12" novalidate>
-                                <div class="row">
+                                <div class="row pt-1">
                                     <div class="col-xl-5 col-lg-1">
                                     </div>
                                     <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6"  style="padding: 2px">
-                                        {% select_tag tipos_productos_servicios 'tipo_producto_servicio_' 'Seleccione una opción' required="" value=valor_tipo_producto_servicio onchange="cambioTipoProductoServicio('')" %}
+                                        {% select_tag tipos_productos_servicios 'tipo_producto_servicio_' 'Seleccione una opción' required="" value=valor_tipo_producto_servicio texto_label="Producto/Servicio" onchange="cambioTipoProductoServicio('')" %}
                                     </div>
                                     <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6"  style="padding: 2px">
-                                        {% select_tag productos_servicios 'producto_servicio_' 'Seleccione una opción' required="" value=valor_producto_servicio onchange="cambioProductoServicio('')" id_label=sl.nombre_subtipos %}
+                                        {% select_tag productos_servicios 'producto_servicio_' 'Seleccione una opción' required="" value=valor_producto_servicio texto_label=label_producto_servicio onchange="cambioProductoServicio('')" id_label="producto_servicio_" %}
                                     </div>
                                     <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6"  style=" padding: 2px">
-                                        {% select_multiple_tag subproductos_subservicios 'subproducto_subservicio_' 'subproducto_subservicio_' 'Seleccione una opción' required="" value=valor_subproducto_subservicio multiple=multiple id_label=sl.nombre_producto_servicio %}
+                                        {% select_multiple_tag subproductos_subservicios 'subproducto_subservicio_' 'subproducto_subservicio_' 'Seleccione una opción' required="" value=valor_subproducto_subservicio texto_label=label_subproducto_subservicio multiple=multiple id_label="subproducto_subservicio_" %}
                                     </div>
-                                    <div class="col-xl-1 col-lg-2 col-md-6 col-sm-6" style="float: right; padding-top: 3px">
+                                    <div class="col-xl-1 col-lg-2 col-md-6 col-sm-6" style="float: right; padding-top: 10px">
                                         <button id="filtrar" class="btn btn-primary btn-pills btn-block">Buscar</button>
                                      </div>
                                 </div>
