EVA-150 Feat: Se cambia la ruta a la que redirige el error de asignación de contraseña.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/password_assign.html
@@ -45,7 +45,7 @@
                             <h1 style="text-align: center">Se ha presentado un error.</h1>
                             <p style="text-align: center">El enlace para el cambio de contraseña no es válido, posiblemente ya fue usado. <br />
                                 Por favor comuníquese con el administrador de EVA.</p>
-                            <a style="text-align: center" href="{% url 'Administracion:cerrar-sesion' %}" >Ir a la página de inicio de sesión</a>
+                            <a style="text-align: center" href="{% url 'Administracion:proveedor-iniciar-sesion' %}" >Ir a la página de inicio de sesión</a>
                         {% endif %}
                     </div>
                 </div>
