EVA-150 feat: Se agrega sombra al panel de estado de documentos y del proveedor.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -3,7 +3,7 @@
         content: "%";
     }
 </style>
-<div id="panel-6" class="panel">
+<div id="panel-6" class="panel shadow-5">
     <div class="panel-container show">
         <div class="panel-content">
             {% if estado_doc %}
