EVA-153 Feat: Se cambia el nombre de certificaciones por certificados en la parte visual.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
@@ -1,6 +1,6 @@
 {% extends 'Administracion/_common/base_administracion.html' %}
 {% load static %}
-<title>{% block titulo %}Certificaciones{% endblock %}</title>
+<title>{% block titulo %}Certificados{% endblock %}</title>
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
@@ -15,7 +15,7 @@
             <div class="col-xl-10  col-lg-11 col-md-12">
                 <div class="header">
                  <h1 class="header-title">
-                    <i class='far fa-file-alt'></i> Certificaciones <span class='fw-300'></span>
+                    <i class='far fa-file-alt'></i> Certificados <span class='fw-300'></span>
                      <br>
                  </h1>
             </div>
