--- a/Administracion/templates/Administracion/_common/menu_aplicacion.html
+++ b/Administracion/templates/Administracion/_common/menu_aplicacion.html
@@ -81,9 +81,9 @@
         </a>
     </li>
     <li {% if menu_actual == 'certificaciones' %} class="active" {% endif %}>
-        <a href="{% url 'Administracion:proveedor-certificaciones' %}" title="Certificaciones" data-filter-tags="proveedor certificaciones">
+        <a href="{% url 'Administracion:proveedor-certificaciones' %}" title="Certificados" data-filter-tags="proveedor certificados">
             <i class="fal fa-file-alt"></i>
-            <span class="nav-link-text" data-i18n="nav.administracion_proveedor_certificaciones">Certificaciones</span>
+            <span class="nav-link-text" data-i18n="nav.administracion_proveedor_certificados">Certificados</span>
         </a>
     </li>
 {% endif %}
