EVA-151 fix: Se corrige la ruta al js de Easy Pie Chart

--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -113,9 +113,10 @@
     <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/modificacionesSelect2.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/funcionesGenerales.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/entidadesBancarias.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/proveedor.js' %}"></script>
-    <script src="{% static 'EVA/Plantilla/js/easy-pie-chart/easypiechart.bundle.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/statistics/easypiechart/easypiechart.bundle.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/controlEstadoProveedor.js' %}"></script>
 
 {% endblock scripts%}
