EVA -151 fix: Se soluciona el problema de que no se veia completamente redondo el gráfico de progreso tanto en la tarjeta de estado del proveedor  como en la de estado de documentos.

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -15,7 +15,7 @@
                 <div class="row w-100">
                     <div class="col-md-6 p-0 align-items-center">
                         {% if n_doc_oblig and n_doc_oblig == n_tip_oblig %}
-                            <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="0">
+                            <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="1" data-scaleColor="#ffffff00">
                                 <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
                                     <span class="js-percent d-block text-dark">{{ total }}</span>
                                     <div class="d-block fs-xs text-dark opacity-70">
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                         {% else %}
-                            <div class="js-easy-pie-chart {% if total == 100 and not datos_estado.estado_solicitud %}color-primary-900{% elif datos_estado.estado_solicitud %}color-danger-500{% else %}color-primary-200{% endif %} position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="0">
+                            <div class="js-easy-pie-chart {% if total == 100 and not datos_estado.estado_solicitud %}color-primary-900{% elif datos_estado.estado_solicitud %}color-danger-500{% else %}color-primary-200{% endif %} position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="1" data-scaleColor="#ffffff00">
                                 <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
                                     <span class="js-percent d-block text-dark">{{ total }}</span>
                                     <div class="d-block fs-xs text-dark opacity-70">
