EVA-151 fix: Se soluciona problema del color de la letra del nombre del colaborador en ls tarjetas del index de colaboradoes.

--- a/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/_tarjeta_empleado.html
@@ -7,7 +7,7 @@
                     <span class="rounded-circle profile-image d-block " style="background-image:url({{ foto_perfil }}); background-size: cover;"></span>
                 </span>
                 <div class="info-card-text flex-1">
-                    <a href="javascript:void(0);" class="fs-xl text-truncate text-truncate-lg text-info" data-toggle="dropdown" aria-expanded="false">
+                    <a href="javascript:void(0);" class="fs-xl text-truncate text-truncate-lg text-primary" data-toggle="dropdown" aria-expanded="false">
                         {{ nombre }}
                         <i class="fal fa-angle-down d-inline-block ml-1 fs-md"></i>
                     </a>
