EVA-151 feat: Se agregan modificaciones faltantes en la actualización al plantilla SmartAdmin  4.5.1

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -14,6 +14,8 @@
         <!-- base css -->
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/vendors.bundle.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/app.bundle.css' %}">
+{#        <link id="mytheme" rel="stylesheet" media="screen, print" href="">#}
+        <link id="myskin" rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/skins/skin-master.css' %}">
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'EVA/Plantilla/img/favicon/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'EVA/Plantilla/img/favicon/favicon-32x32.png' %}">
@@ -21,7 +23,6 @@
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/toastr/toastr.css' %}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
         <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/custom/generales.css' %}">
-        <!--<link rel="stylesheet" media="screen, print" href="css/your_styles.css">-->
         {% block styles %}
         {% endblock %}
     </head>
