--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -26,7 +26,7 @@
         {% block styles %}
         {% endblock %}
     </head>
-   <body class="mod-bg-1 ">
+   <body class="mod-bg-1 mod-nav-link">
 
         {% include 'EVA/_common/load_settings.html' %}
 
